// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cashflow predictor (characterization) > pins anomalies: expense spikes on days 18 and 30 1`] = `
[
  {
    "actualValue": -1395,
    "confidence": 0.99,
    "context": {
      "avgNet": 310.75,
      "date": "2026-01-19",
      "expense": 2400,
      "income": 1005,
      "stdNet": 393.99,
      "threshold": 2,
      "zScore": -4.33,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 4.33,
    "entityId": "2026-01-19",
    "entityType": "cashflow_day",
    "expectedValue": 310.75,
    "id": "cashflow-zscore-2026-01-19",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-19: S/ -1,395. Promedio: S/ 310.75. Z-score: -4.33 (umbral: 2). Ingresos: S/ 1,005, Egresos: S/ 2,400.",
    "severity": "critical",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": -1375,
    "confidence": 0.99,
    "context": {
      "avgNet": 310.75,
      "date": "2026-01-31",
      "expense": 2400,
      "income": 1025,
      "stdNet": 393.99,
      "threshold": 2,
      "zScore": -4.28,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 4.28,
    "entityId": "2026-01-31",
    "entityType": "cashflow_day",
    "expectedValue": 310.75,
    "id": "cashflow-zscore-2026-01-31",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-31: S/ -1,375. Promedio: S/ 310.75. Z-score: -4.28 (umbral: 2). Ingresos: S/ 1,025, Egresos: S/ 2,400.",
    "severity": "critical",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 2400,
    "confidence": 0.95,
    "context": {
      "dailyExpense": 2400,
      "date": "2026-01-19",
      "rollingAvgExpense": 599.17,
      "rollingStdExpense": 15.94,
      "rollingWindowDays": 7,
      "spikePercent": 300.56,
      "thresholdRatio": 1.5,
    },
    "detectionMethod": "cashflow_expense_spike_rolling",
    "deviation": 3.01,
    "entityId": "2026-01-19",
    "entityType": "cashflow_day",
    "expectedValue": 599.17,
    "id": "cashflow-expense-spike-2026-01-19",
    "metric": "cashflow_expense_spike",
    "reasoning": "Egreso del día 2026-01-19: S/ 2,400. Promedio 7 días: S/ 599.17. Pico: 300.6%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 2400,
    "confidence": 0.95,
    "context": {
      "dailyExpense": 2400,
      "date": "2026-01-31",
      "rollingAvgExpense": 600.83,
      "rollingStdExpense": 15.94,
      "rollingWindowDays": 7,
      "spikePercent": 299.45,
      "thresholdRatio": 1.5,
    },
    "detectionMethod": "cashflow_expense_spike_rolling",
    "deviation": 2.99,
    "entityId": "2026-01-31",
    "entityType": "cashflow_day",
    "expectedValue": 600.83,
    "id": "cashflow-expense-spike-2026-01-31",
    "metric": "cashflow_expense_spike",
    "reasoning": "Egreso del día 2026-01-31: S/ 2,400. Promedio 7 días: S/ 600.83. Pico: 299.4%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;

exports[`cashflow predictor (characterization) > pins anomalies: income drops on days 20 and 33 1`] = `
[
  {
    "actualValue": -390,
    "confidence": 0.99,
    "context": {
      "avgNet": 360.88,
      "date": "2026-01-21",
      "expense": 590,
      "income": 200,
      "stdNet": 172.72,
      "threshold": 2,
      "zScore": -4.35,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 4.35,
    "entityId": "2026-01-21",
    "entityType": "cashflow_day",
    "expectedValue": 360.88,
    "id": "cashflow-zscore-2026-01-21",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-21: S/ -390. Promedio: S/ 360.88. Z-score: -4.35 (umbral: 2). Ingresos: S/ 200, Egresos: S/ 590.",
    "severity": "critical",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": -375,
    "confidence": 0.99,
    "context": {
      "avgNet": 360.88,
      "date": "2026-02-03",
      "expense": 575,
      "income": 200,
      "stdNet": 172.72,
      "threshold": 2,
      "zScore": -4.26,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 4.26,
    "entityId": "2026-02-03",
    "entityType": "cashflow_day",
    "expectedValue": 360.88,
    "id": "cashflow-zscore-2026-02-03",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-02-03: S/ -375. Promedio: S/ 360.88. Z-score: -4.26 (umbral: 2). Ingresos: S/ 200, Egresos: S/ 575.",
    "severity": "critical",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 200,
    "confidence": 0.8,
    "context": {
      "dailyIncome": 200,
      "date": "2026-01-21",
      "dropPercent": 80.05,
      "rollingAvgIncome": 1002.5,
      "rollingStdIncome": 18.1,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.8,
    "entityId": "2026-01-21",
    "entityType": "cashflow_day",
    "expectedValue": 1002.5,
    "id": "cashflow-income-drop-2026-01-21",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-21: S/ 200. Promedio 7 días: S/ 1,002.5. Caída: 80.0%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 200,
    "confidence": 0.8,
    "context": {
      "dailyIncome": 200,
      "date": "2026-02-03",
      "dropPercent": 80.12,
      "rollingAvgIncome": 1005.83,
      "rollingStdIncome": 15.94,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.8,
    "entityId": "2026-02-03",
    "entityType": "cashflow_day",
    "expectedValue": 1005.83,
    "id": "cashflow-income-drop-2026-02-03",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-02-03: S/ 200. Promedio 7 días: S/ 1,005.83. Caída: 80.1%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;

exports[`cashflow predictor (characterization) > pins anomalies: mixed: drop, spike and reversal 1`] = `
[
  {
    "actualValue": -2248,
    "confidence": 0.96,
    "context": {
      "avgNet": 200.48,
      "date": "2026-01-31",
      "expense": 2600,
      "income": 352,
      "stdNet": 652.32,
      "threshold": 2,
      "zScore": -3.75,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 3.75,
    "entityId": "2026-01-31",
    "entityType": "cashflow_day",
    "expectedValue": 200.48,
    "id": "cashflow-zscore-2026-01-31",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-31: S/ -2,248. Promedio: S/ 200.48. Z-score: -3.75 (umbral: 2). Ingresos: S/ 352, Egresos: S/ 2,600.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": -340.32,
    "confidence": 0.9,
    "context": {
      "change": -1081.59,
      "priorPeriod": {
        "avgNet": 741.27,
        "end": "2026-01-22",
        "start": "2026-01-01",
      },
      "recentPeriod": {
        "avgNet": -340.32,
        "end": "2026-02-13",
        "start": "2026-01-23",
      },
    },
    "detectionMethod": "cashflow_trend_reversal",
    "deviation": 1081.59,
    "entityId": "trend",
    "entityType": "cashflow_trend",
    "expectedValue": 741.27,
    "id": "cashflow-trend-reversal-2026-01-23",
    "metric": "cashflow_trend_reversal",
    "reasoning": "Cambio de tendencia: alcista→bajista (positive→negative). Promedio neto previo (2026-01-01–2026-01-22): S/ 741.27. Promedio neto reciente (2026-01-23–2026-02-13): S/ -340.32.",
    "severity": "medium",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 100,
    "confidence": 0.74,
    "context": {
      "dailyIncome": 100,
      "date": "2026-01-11",
      "dropPercent": 92.86,
      "rollingAvgIncome": 1401.17,
      "rollingStdIncome": 1.17,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.93,
    "entityId": "2026-01-11",
    "entityType": "cashflow_day",
    "expectedValue": 1401.17,
    "id": "cashflow-income-drop-2026-01-11",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-11: S/ 100. Promedio 7 días: S/ 1,401.17. Caída: 92.9%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 352,
    "confidence": 0.83,
    "context": {
      "dailyIncome": 352,
      "date": "2026-01-23",
      "dropPercent": 74.88,
      "rollingAvgIncome": 1401.17,
      "rollingStdIncome": 1.17,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.75,
    "entityId": "2026-01-23",
    "entityType": "cashflow_day",
    "expectedValue": 1401.17,
    "id": "cashflow-income-drop-2026-01-23",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-23: S/ 352. Promedio 7 días: S/ 1,401.17. Caída: 74.9%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 353,
    "confidence": 0.84,
    "context": {
      "dailyIncome": 353,
      "date": "2026-01-24",
      "dropPercent": 71.22,
      "rollingAvgIncome": 1226.5,
      "rollingStdIncome": 428.42,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.71,
    "entityId": "2026-01-24",
    "entityType": "cashflow_day",
    "expectedValue": 1226.5,
    "id": "cashflow-income-drop-2026-01-24",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-24: S/ 353. Promedio 7 días: S/ 1,226.5. Caída: 71.2%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 350,
    "confidence": 0.87,
    "context": {
      "dailyIncome": 350,
      "date": "2026-01-25",
      "dropPercent": 66.72,
      "rollingAvgIncome": 1051.83,
      "rollingStdIncome": 541.7,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.67,
    "entityId": "2026-01-25",
    "entityType": "cashflow_day",
    "expectedValue": 1051.83,
    "id": "cashflow-income-drop-2026-01-25",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-25: S/ 350. Promedio 7 días: S/ 1,051.83. Caída: 66.7%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 351,
    "confidence": 0.9,
    "context": {
      "dailyIncome": 351,
      "date": "2026-01-26",
      "dropPercent": 59.95,
      "rollingAvgIncome": 876.5,
      "rollingStdIncome": 574.93,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.6,
    "entityId": "2026-01-26",
    "entityType": "cashflow_day",
    "expectedValue": 876.5,
    "id": "cashflow-income-drop-2026-01-26",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-26: S/ 351. Promedio 7 días: S/ 876.5. Caída: 60.0%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 352,
    "confidence": 0.95,
    "context": {
      "dailyIncome": 352,
      "date": "2026-01-27",
      "dropPercent": 49.8,
      "rollingAvgIncome": 701.17,
      "rollingStdIncome": 541.7,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.5,
    "entityId": "2026-01-27",
    "entityType": "cashflow_day",
    "expectedValue": 701.17,
    "id": "cashflow-income-drop-2026-01-27",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-27: S/ 352. Promedio 7 días: S/ 701.17. Caída: 49.8%.",
    "severity": "medium",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 353,
    "confidence": 0.95,
    "context": {
      "dailyIncome": 353,
      "date": "2026-01-28",
      "dropPercent": 32.95,
      "rollingAvgIncome": 526.5,
      "rollingStdIncome": 428.42,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.33,
    "entityId": "2026-01-28",
    "entityType": "cashflow_day",
    "expectedValue": 526.5,
    "id": "cashflow-income-drop-2026-01-28",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-28: S/ 353. Promedio 7 días: S/ 526.5. Caída: 33.0%.",
    "severity": "medium",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 2600,
    "confidence": 0.95,
    "context": {
      "dailyExpense": 2600,
      "date": "2026-01-31",
      "rollingAvgExpense": 601,
      "rollingStdExpense": 0.89,
      "rollingWindowDays": 7,
      "spikePercent": 332.61,
      "thresholdRatio": 1.5,
    },
    "detectionMethod": "cashflow_expense_spike_rolling",
    "deviation": 3.33,
    "entityId": "2026-01-31",
    "entityType": "cashflow_day",
    "expectedValue": 601,
    "id": "cashflow-expense-spike-2026-01-31",
    "metric": "cashflow_expense_spike",
    "reasoning": "Egreso del día 2026-01-31: S/ 2,600. Promedio 7 días: S/ 601. Pico: 332.6%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;

exports[`cashflow predictor (characterization) > pins anomalies: stable (no anomalies expected) 1`] = `[]`;

exports[`cashflow predictor (characterization) > pins anomalies: too few data points 1`] = `[]`;

exports[`cashflow predictor (characterization) > pins anomalies: trend reversal negative -> positive 1`] = `
[
  {
    "actualValue": 900.5,
    "confidence": 0.9,
    "context": {
      "change": 1200.05,
      "priorPeriod": {
        "avgNet": -299.55,
        "end": "2026-01-20",
        "start": "2026-01-01",
      },
      "recentPeriod": {
        "avgNet": 900.5,
        "end": "2026-02-09",
        "start": "2026-01-21",
      },
    },
    "detectionMethod": "cashflow_trend_reversal",
    "deviation": 1200.05,
    "entityId": "trend",
    "entityType": "cashflow_trend",
    "expectedValue": -299.55,
    "id": "cashflow-trend-reversal-2026-01-21",
    "metric": "cashflow_trend_reversal",
    "reasoning": "Cambio de tendencia: bajista→alcista (negative→positive). Promedio neto previo (2026-01-01–2026-01-20): S/ -299.55. Promedio neto reciente (2026-01-21–2026-02-09): S/ 900.5.",
    "severity": "medium",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;

exports[`cashflow predictor (characterization) > pins anomalies: trend reversal positive -> negative 1`] = `
[
  {
    "actualValue": -299.5,
    "confidence": 0.9,
    "context": {
      "change": -1199.95,
      "priorPeriod": {
        "avgNet": 900.45,
        "end": "2026-01-20",
        "start": "2026-01-01",
      },
      "recentPeriod": {
        "avgNet": -299.5,
        "end": "2026-02-09",
        "start": "2026-01-21",
      },
    },
    "detectionMethod": "cashflow_trend_reversal",
    "deviation": 1199.95,
    "entityId": "trend",
    "entityType": "cashflow_trend",
    "expectedValue": 900.45,
    "id": "cashflow-trend-reversal-2026-01-21",
    "metric": "cashflow_trend_reversal",
    "reasoning": "Cambio de tendencia: alcista→bajista (positive→negative). Promedio neto previo (2026-01-01–2026-01-20): S/ 900.45. Promedio neto reciente (2026-01-21–2026-02-09): S/ -299.5.",
    "severity": "medium",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 302,
    "confidence": 0.8,
    "context": {
      "dailyIncome": 302,
      "date": "2026-01-21",
      "dropPercent": 79.88,
      "rollingAvgIncome": 1501,
      "rollingStdIncome": 0.89,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.8,
    "entityId": "2026-01-21",
    "entityType": "cashflow_day",
    "expectedValue": 1501,
    "id": "cashflow-income-drop-2026-01-21",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-21: S/ 302. Promedio 7 días: S/ 1,501. Caída: 79.9%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 300,
    "confidence": 0.82,
    "context": {
      "dailyIncome": 300,
      "date": "2026-01-22",
      "dropPercent": 76.94,
      "rollingAvgIncome": 1301,
      "rollingStdIncome": 489.41,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.77,
    "entityId": "2026-01-22",
    "entityType": "cashflow_day",
    "expectedValue": 1301,
    "id": "cashflow-income-drop-2026-01-22",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-22: S/ 300. Promedio 7 días: S/ 1,301. Caída: 76.9%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 301,
    "confidence": 0.84,
    "context": {
      "dailyIncome": 301,
      "date": "2026-01-23",
      "dropPercent": 72.66,
      "rollingAvgIncome": 1101,
      "rollingStdIncome": 619.68,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.73,
    "entityId": "2026-01-23",
    "entityType": "cashflow_day",
    "expectedValue": 1101,
    "id": "cashflow-income-drop-2026-01-23",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-23: S/ 301. Promedio 7 días: S/ 1,101. Caída: 72.7%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 302,
    "confidence": 0.87,
    "context": {
      "dailyIncome": 302,
      "date": "2026-01-24",
      "dropPercent": 66.48,
      "rollingAvgIncome": 901,
      "rollingStdIncome": 657.27,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.66,
    "entityId": "2026-01-24",
    "entityType": "cashflow_day",
    "expectedValue": 901,
    "id": "cashflow-income-drop-2026-01-24",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-24: S/ 302. Promedio 7 días: S/ 901. Caída: 66.5%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 300,
    "confidence": 0.91,
    "context": {
      "dailyIncome": 300,
      "date": "2026-01-25",
      "dropPercent": 57.2,
      "rollingAvgIncome": 701,
      "rollingStdIncome": 619.29,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.57,
    "entityId": "2026-01-25",
    "entityType": "cashflow_day",
    "expectedValue": 701,
    "id": "cashflow-income-drop-2026-01-25",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-25: S/ 300. Promedio 7 días: S/ 701. Caída: 57.2%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 301,
    "confidence": 0.95,
    "context": {
      "dailyIncome": 301,
      "date": "2026-01-26",
      "dropPercent": 39.92,
      "rollingAvgIncome": 501,
      "rollingStdIncome": 489.9,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.4,
    "entityId": "2026-01-26",
    "entityType": "cashflow_day",
    "expectedValue": 501,
    "id": "cashflow-income-drop-2026-01-26",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-26: S/ 301. Promedio 7 días: S/ 501. Caída: 39.9%.",
    "severity": "medium",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;

exports[`cashflow predictor (characterization) > pins anomalies: z-score outlier 1`] = `
[
  {
    "actualValue": 8420,
    "confidence": 0.99,
    "context": {
      "avgNet": 600.5,
      "date": "2026-01-26",
      "expense": 580,
      "income": 9000,
      "stdNet": 1268.07,
      "threshold": 2,
      "zScore": 6.17,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 6.17,
    "entityId": "2026-01-26",
    "entityType": "cashflow_day",
    "expectedValue": 600.5,
    "id": "cashflow-zscore-2026-01-26",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-26: S/ 8,420. Promedio: S/ 600.5. Z-score: 6.17 (umbral: 2). Ingresos: S/ 9,000, Egresos: S/ 580.",
    "severity": "critical",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 1000,
    "confidence": 0.91,
    "context": {
      "dailyIncome": 1000,
      "date": "2026-01-27",
      "dropPercent": 57.1,
      "rollingAvgIncome": 2330.83,
      "rollingStdIncome": 3267.24,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.57,
    "entityId": "2026-01-27",
    "entityType": "cashflow_day",
    "expectedValue": 2330.83,
    "id": "cashflow-income-drop-2026-01-27",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-27: S/ 1,000. Promedio 7 días: S/ 2,330.83. Caída: 57.1%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 1020,
    "confidence": 0.92,
    "context": {
      "dailyIncome": 1020,
      "date": "2026-01-28",
      "dropPercent": 56.27,
      "rollingAvgIncome": 2332.5,
      "rollingStdIncome": 3266.42,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.56,
    "entityId": "2026-01-28",
    "entityType": "cashflow_day",
    "expectedValue": 2332.5,
    "id": "cashflow-income-drop-2026-01-28",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-28: S/ 1,020. Promedio 7 días: S/ 2,332.5. Caída: 56.3%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 985,
    "confidence": 0.91,
    "context": {
      "dailyIncome": 985,
      "date": "2026-01-29",
      "dropPercent": 57.8,
      "rollingAvgIncome": 2334.17,
      "rollingStdIncome": 3265.62,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.58,
    "entityId": "2026-01-29",
    "entityType": "cashflow_day",
    "expectedValue": 2334.17,
    "id": "cashflow-income-drop-2026-01-29",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-29: S/ 985. Promedio 7 días: S/ 2,334.17. Caída: 57.8%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 1005,
    "confidence": 0.92,
    "context": {
      "dailyIncome": 1005,
      "date": "2026-01-30",
      "dropPercent": 56.97,
      "rollingAvgIncome": 2335.83,
      "rollingStdIncome": 3264.79,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.57,
    "entityId": "2026-01-30",
    "entityType": "cashflow_day",
    "expectedValue": 2335.83,
    "id": "cashflow-income-drop-2026-01-30",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-30: S/ 1,005. Promedio 7 días: S/ 2,335.83. Caída: 57.0%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 1025,
    "confidence": 0.92,
    "context": {
      "dailyIncome": 1025,
      "date": "2026-01-31",
      "dropPercent": 56.15,
      "rollingAvgIncome": 2337.5,
      "rollingStdIncome": 3263.97,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.56,
    "entityId": "2026-01-31",
    "entityType": "cashflow_day",
    "expectedValue": 2337.5,
    "id": "cashflow-income-drop-2026-01-31",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-31: S/ 1,025. Promedio 7 días: S/ 2,337.5. Caída: 56.1%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 990,
    "confidence": 0.91,
    "context": {
      "dailyIncome": 990,
      "date": "2026-02-01",
      "dropPercent": 57.68,
      "rollingAvgIncome": 2339.17,
      "rollingStdIncome": 3263.16,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.7,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.58,
    "entityId": "2026-02-01",
    "entityType": "cashflow_day",
    "expectedValue": 2339.17,
    "id": "cashflow-income-drop-2026-02-01",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-02-01: S/ 990. Promedio 7 días: S/ 2,339.17. Caída: 57.7%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;

exports[`cashflow predictor (characterization) > pins custom thresholds 1`] = `
[
  {
    "actualValue": -1395,
    "confidence": 0.99,
    "context": {
      "avgNet": 335.38,
      "date": "2026-01-19",
      "expense": 2400,
      "income": 1005,
      "stdNet": 307.14,
      "threshold": 2,
      "zScore": -5.63,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 5.63,
    "entityId": "2026-01-19",
    "entityType": "cashflow_day",
    "expectedValue": 335.38,
    "id": "cashflow-zscore-2026-01-19",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-19: S/ -1,395. Promedio: S/ 335.38. Z-score: -5.63 (umbral: 2). Ingresos: S/ 1,005, Egresos: S/ 2,400.",
    "severity": "critical",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": -390,
    "confidence": 0.87,
    "context": {
      "avgNet": 335.38,
      "date": "2026-01-21",
      "expense": 590,
      "income": 200,
      "stdNet": 307.14,
      "threshold": 2,
      "zScore": -2.36,
    },
    "detectionMethod": "cashflow_zscore_statistical",
    "deviation": 2.36,
    "entityId": "2026-01-21",
    "entityType": "cashflow_day",
    "expectedValue": 335.38,
    "id": "cashflow-zscore-2026-01-21",
    "metric": "cashflow_zscore",
    "reasoning": "Flujo neto del día 2026-01-21: S/ -390. Promedio: S/ 335.38. Z-score: -2.36 (umbral: 2). Ingresos: S/ 200, Egresos: S/ 590.",
    "severity": "low",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 200,
    "confidence": 0.8,
    "context": {
      "dailyIncome": 200,
      "date": "2026-01-21",
      "dropPercent": 80.05,
      "rollingAvgIncome": 1002.5,
      "rollingStdIncome": 18.1,
      "rollingWindowDays": 7,
      "thresholdRatio": 0.9,
    },
    "detectionMethod": "cashflow_income_drop_rolling",
    "deviation": 0.8,
    "entityId": "2026-01-21",
    "entityType": "cashflow_day",
    "expectedValue": 1002.5,
    "id": "cashflow-income-drop-2026-01-21",
    "metric": "cashflow_income_drop",
    "reasoning": "Ingreso del día 2026-01-21: S/ 200. Promedio 7 días: S/ 1,002.5. Caída: 80.0%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
  {
    "actualValue": 2400,
    "confidence": 0.95,
    "context": {
      "dailyExpense": 2400,
      "date": "2026-01-19",
      "rollingAvgExpense": 599.17,
      "rollingStdExpense": 15.94,
      "rollingWindowDays": 7,
      "spikePercent": 300.56,
      "thresholdRatio": 1.2,
    },
    "detectionMethod": "cashflow_expense_spike_rolling",
    "deviation": 3.01,
    "entityId": "2026-01-19",
    "entityType": "cashflow_day",
    "expectedValue": 599.17,
    "id": "cashflow-expense-spike-2026-01-19",
    "metric": "cashflow_expense_spike",
    "reasoning": "Egreso del día 2026-01-19: S/ 2,400. Promedio 7 días: S/ 599.17. Pico: 300.6%.",
    "severity": "high",
    "timestamp": "2026-03-01T00:00:00.000Z",
  },
]
`;
